<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/nav_dashboard" />
    
    <item
        android:id="@+id/nav_prev_mensal"
        android:icon="@android:drawable/ic_menu_month"
        android:title="@string/nav_prev_mensal" />
    
    <item
        android:id="@+id/nav_prev_semestral"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_prev_semestral" />
    
    <item
        android:id="@+id/nav_corretiva"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/nav_corretiva" />
    
    <item
        android:id="@+id/nav_pmoc"
        android:icon="@android:drawable/ic_menu_report_image"
        android:title="@string/nav_pmoc" />
    
</menu>
